fix: calculated height and css bleeding

--- a/projects/sbb-esta/angular-public/autocomplete/src/autocomplete/autocomplete.component.scss
+++ b/projects/sbb-esta/angular-public/autocomplete/src/autocomplete/autocomplete.component.scss
@@ -10,7 +10,9 @@
 }
 
 input[aria-expanded='true'] {
-  @include autocompleteInputActive();
+  &.sbb-autocomplete-input-below {
+    @include autocompleteInputActive();
+  }
 
   &.sbb-autocomplete-input-above {
     @include autocompleteInputActive($mode: reverse);
